--- a/MF Juridische Dienstverlening Website/diensten.html
+++ b/MF Juridische Dienstverlening Website/diensten.html
@@ -2,13 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>MF Juridische Dienstverlening</title>
+  <title>Diensten | MF Juridische Dienstverlening</title>
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/footer.css">
-  <link rel="stylesheet" href="styles/hero.css">
-  <link rel="stylesheet" href="styles/home-content.css">
+
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:wght@700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
@@ -44,30 +43,7 @@
   
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Juridisch Advies op Maat</h1>
-      <p>Betrouwbaar. Persoonlijk. Doeltreffend.</p>
-      <a href="contact.html" class="cta-button">Neem Contact Op</a>
-    </div>
-  </section>
-
-  <section class="home-content">
-    <div class="container">
-      <h2>Over MF Juridische Dienstverlening</h2>
-      <p>Met jarenlange ervaring in juridisch advies en dienstverlening bied ik ondersteuning op maat voor particulieren, ondernemers, en organisaties. Mijn missie is om complexe juridische vraagstukken helder en efficiënt op te lossen, zodat jij je kunt richten op wat echt belangrijk is.</p>
-      
-      <h3>Diensten</h3>
-      <ul>
-        <li>Advies over contracten en overeenkomsten</li>
-        <li>Arbeidsrecht en HR-gerelateerde kwesties</li>
-        <li>Hulp bij juridische geschillen</li>
-        <li>Ondersteuning bij compliance en regelgeving</li>
-      </ul>
-      
-      <p>Benieuwd naar wat ik voor jou kan betekenen? <a href="diensten.html">Lees meer over mijn diensten</a> of <a href="contact.html">neem direct contact op</a>.</p>
-    </div>
-  </section>
+ 
 </body>
 
 <footer class="footer">
